tests/negative/regression/r20.orng
// r20.orng:5:30: error: expected an expression here, got `]`
// fn main() -> Int { return &[] }
//                             ^
// 
fn main() -> Int { return &[] }